[gd_scene load_steps=13 format=3 uid="uid://dwd6xnyrx4mvf"]

[ext_resource type="Script" uid="uid://4a032o1badt" path="res://Scripts/slime_purple.gd" id="1_3e1j7"]
[ext_resource type="Texture2D" uid="uid://vmtr2qvhrkvq" path="res://Assets/sprites/slime_purple.png" id="1_e8qgp"]
[ext_resource type="AudioStream" uid="uid://dt53aelssoms8" path="res://Assets/sounds/explosion.wav" id="2_3e1j7"]

[sub_resource type="AtlasTexture" id="AtlasTexture_1pqk1"]
atlas = ExtResource("1_e8qgp")
region = Rect2(0, 48, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_wp162"]
atlas = ExtResource("1_e8qgp")
region = Rect2(0, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_fio28"]
atlas = ExtResource("1_e8qgp")
region = Rect2(24, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_7kdt4"]
atlas = ExtResource("1_e8qgp")
region = Rect2(48, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_uis7a"]
atlas = ExtResource("1_e8qgp")
region = Rect2(72, 24, 24, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_hcw4y"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1pqk1")
}],
"loop": true,
"name": &"attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wp162")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fio28")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7kdt4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uis7a")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_5dsaj"]
radius = 8.0

[sub_resource type="CircleShape2D" id="CircleShape2D_61nk0"]
radius = 9.0

[sub_resource type="CircleShape2D" id="CircleShape2D_ybbks"]
radius = 9.0

[node name="SlimePurple" type="CharacterBody2D" groups=["enemies"]]
collision_layer = 2
collision_mask = 9
script = ExtResource("1_3e1j7")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -12)
sprite_frames = SubResource("SpriteFrames_hcw4y")
animation = &"idle"
autoplay = "idle"
frame = 3
frame_progress = 0.9508759

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -6)
shape = SubResource("CircleShape2D_5dsaj")

[node name="RayCastRight" type="RayCast2D" parent="."]
position = Vector2(0, -6)
target_position = Vector2(10, 0)
collision_mask = 8

[node name="RayCastLeft" type="RayCast2D" parent="."]
position = Vector2(0, -6)
target_position = Vector2(-10, 0)
collision_mask = 8

[node name="BounceArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="BounceArea"]
position = Vector2(0, -6)
shape = SubResource("CircleShape2D_61nk0")

[node name="DamageArea" type="Area2D" parent="."]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DamageArea"]
position = Vector2(0, -6)
shape = SubResource("CircleShape2D_ybbks")

[node name="AttackTimer" type="Timer" parent="."]

[node name="RespawnTimer" type="Timer" parent="."]

[node name="ExplosionSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_3e1j7")

[connection signal="body_entered" from="BounceArea" to="." method="_on_bounce_area_body_entered"]
